--- a/refactor.org
+++ b/refactor.org
@@ -21,8 +21,8 @@ def trimmed_stats(x, sampled = True):
 
 * TODO Allenamento
 - [ ] verificare parametri allenamento su choi
-- [ ] modificare allenamento del modello
-  - [ ] costruire generatore per random-seed train
+- [X] modificare allenamento del modello
+  - [X] costruire generatore per random-seed train
 #+begin_src python
 def get_random_seed():
     i = 0
@@ -44,7 +44,7 @@ def get_pretraineds(model):
 
 model.pretraineds = get_pretraineds(model)
 #+end_src
-- [ ] unire i due precedenti
+- [X] unire i due precedenti
 #+begin_src python
 for model_i, random_seed in zip(model.pretraineds, get_random_seed()):
     if os.path.isfile(model_i):
@@ -62,5 +62,6 @@ for model_i in model.pretraineds:
         train(model)
     # ...
 #+end_src
+- [ ] verificare /mappings/
 - [ ] modificare salvataggio distribuzione (header unico in =results/performances=)
 - [ ] automatizzare calcolo performance
